--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://correios.free.beeceptor.com",
+  "proxy": "http://localhost:8080/chat",
   "eslintConfig": {
     "extends": [
       "react-app",
