--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_LIST_CHATS=chat1,chat2
+REACT_APP_SOCKET_SERVER=http://localhost:9092
+REACT_APP_MESSAGE_EVENT=message
